padding (+1 squashed commit) Squashed commits: [9371f65] added code for aspect ratio and some fixes it for ie8

--- a/src/css/jwplayer.less
+++ b/src/css/jwplayer.less
@@ -257,3 +257,25 @@
 .jw-aspect {
     display: none;
 }
+
+
+// Aspect Ratio code
+
+.jwplayer {
+    position: relative;
+    width: 50%;		/* desired width */
+}
+
+.jwplayer:before{
+    content: "";
+    display: block;
+    padding-top: 56.25%; // 16:9 Ratio (9/16)
+}
+
+.jwplayer .jw-main {
+    position:  absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
